static/registry_app/css/registry_style.css
/* Global Styles */
html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    overflow: hidden;
    font-family: 'Ubuntu';
    src: url('/static/fonts/Ubuntu-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    overflow-x: hidden;
}

/* Header Styling */
header {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: transparent;
    padding: 1.04vw; /* 20px -> 1.04vw based on 1920px width */
    box-sizing: border-box;
}

.header-item {
    flex: 1;
    text-align: center;
}

.header-left {
    text-align: left;
}

.header-right {
    text-align: right;
}

/* Responsive Header Height */
@media (max-width: 768px) {
    header {
        height: 4.63vh; /* 50px -> 4.63vh based on 1080px height */
    }
}

@media (min-width: 769px) {
    header {
        height: 6.48vh; /* 70px -> 6.48vh */
    }
}

/* Font Face Definitions */
@font-face {
    font-family: 'Ubuntu';
    src: url('/static/fonts/Ubuntu-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Ubuntu';
    src: url('/static/fonts/Ubuntu-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
}

/* Style for the text entered in the input box */
input[type="text"],
input[type="email"],
input[type="date"]{
    font-family: 'Ubuntu', sans-serif;
    font-weight: 400; /* Use Ubuntu Regular */
    border: #49a6a2 solid 4px;
    border-radius: 10px;
    z-index: 1;
    text-align: center;
}

/* Form Styling */
.form-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    height: calc(100vh - 6.48vh); /* Height adapts with header */
}

.form-container {
    background-color: #ffffff;
    padding: 1.04vw; /* 20px -> 1.04vw */
    max-width: 23.83vw; /* 400px -> 20.83vw */
    width: 100%;
    text-align: center;
    box-sizing: border-box;
    margin-top: 6.48vh; /* 60px -> 6.48vh */
}

.form-row {
    display: flex;
    align-items: center;
    margin-bottom: 2.4vh; /* 15px -> 1.39vh */
}

form label {
    margin-right: 10px; /* Space between label and input */
    text-align: center; /* Optional: right-align the label */
    z-index: 1;
}

/* Label Styling */
.label-box {
    display: inline-flex;
    background-color: #49a6a2;
    padding: 0.46vh 0.52vw; /* Vertical and horizontal padding */
    border-radius: 0.74vw; /* Rounded corners */
    color: #ffffff;
    font-weight: bold;
    height: 4.2vh; /* Consistent height */
    width: 5.2vw; /* Fixed width for all labels */
    text-align: center;
    align-items: center;
    justify-content: center;
    z-index: -1;
}

.label-box.large {
    font-size: 0.93vw; /* 18px -> 0.93vw */
}

.label-box.small {
    font-size: 0.73vw; /* 14px -> 0.73vw */
}

form input {
    width: 85%;
    height: 40px;
    box-sizing: border-box;
    padding: 4px;
}

/* Button Styling */
.button-wrapper {
    margin-left: 5.99vw; /* 115px -> 5.99vw */
    width: 85%;
}

.submit-button {
    border: none;
    background-color: #e9a3b8;
    width: 6.77vw; /* 130px -> 6.77vw */
    height: 3.7vh; /* 40px -> 3.7vh */
    border-radius: 0.26vw; /* 5px -> 0.26vw */
    font-family: 'Ubuntu', sans-serif;
    font-weight: 700;
    font-size: 1.04vw; /* medium font size -> adjust as needed */
    color: #31716e;
    cursor: pointer;
}

/* Responsive Image Styling */
.home-image {
    position: absolute;
    top: 5.56vh; /* 60px -> 5.56vh */
    left: 2.6vw; /* 50px -> 2.6vw */
    height: 22.1vh; /* 120px -> 11.1vh */
    z-index: 1;
}

.logo-image {
    position: absolute;
    top: 12.04vh; /* 130px -> 12.04vh */
    left: 50%;
    transform: translate(-50%, -50%);
    height: 11.1vh; /* 120px -> 11.1vh */
    z-index: 1;
}

.adfan-image {
    position: absolute;
    top: 5.56vh; /* 60px -> 5.56vh */
    right: 2.6vw; /* 50px -> 2.6vw */
    height: 16.67vh; /* 180px -> 16.67vh */
    z-index: 4;
}

.heart-image {
    position: absolute;
    bottom: -22.15vh; /* -250px -> -23.15vh */
    right: -7.17vw; /* -80px -> -4.17vw */
    height: 104.96vh; /* 950px -> 87.96vh */
    z-index: 1;
    opacity: 0.3;
}

/* Media Queries to Adjust for Smaller Screens */
@media (max-width: 1024px) {
    .heart-image {
        height: 40vh; /* Reduce height for medium-sized screens */
        bottom: -15vh; /* Adjust position */
        right: 0; /* Keep aligned to the right */
    }
}

@media (max-width: 768px) {
    .heart-image {
        height: 30vh; /* Reduce size significantly for small screens */
        bottom: -10vh; /* Adjust to ensure no overlap */
        right: 0;
        transform: translate(30%, 0); /* Keep it from overlapping content */
    }
}

@media (max-width: 480px) {
    .heart-image {
        height: 20vh; /* Smaller size for mobile screens */
        bottom: -5vh; /* Lift image slightly to ensure it does not overlap */
        right: 0;
        transform: translate(20%, 0); /* Ensure it's kept away from the content */
    }
}

.hearts-image {
    position: absolute;
    top: 24.22vh; /* 240px -> 22.22vh */
    left: -3vw; /* -20px -> -1.04vw */
    height: 45.67vh; /* 450px -> 41.67vh */
    max-height: 46vh;
    z-index: 1;
    opacity: 0.3;
    max-height: 100%; /* Ensure it doesn't exceed container */
    width: auto; /* Maintain aspect ratio */
}

.preregistro-image {
    position: absolute;
    top: 27vh; /* 270px -> 25vh */
    left: 50%;
    transform: translate(-50%, -50%);
    height: 7.02vh; /* 65px -> 6.02vh */
    z-index: 2;
}

.family-image {
    position: absolute;
    bottom: -1.85vh; /* -20px -> -1.85vh */
    left: 11.81vw; /* 150px -> 7.81vw */
    height: 30.93vh; /* 280px -> 25.93vh */
    z-index: 1;
}


/* Mobile-Specific Layout (for screens smaller than 768px) */

@media (max-width: 768px) {

    @font-face {
        font-family: 'Ubuntu';
        src: url('/static/fonts/Ubuntu-Regular.ttf') format('truetype');
        font-weight: 400;
        font-style: normal;
    }
    
    @font-face {
        font-family: 'Ubuntu';
        src: url('/static/fonts/Ubuntu-Bold.ttf') format('truetype');
        font-weight: 700;
        font-style: normal;
    }

    /* Style for the text entered in the input box */
    input[type="text"],
    input[type="email"],
    input[type="date"]{
        font-family: 'Ubuntu', sans-serif;
        font-weight: 400; /* Use Ubuntu Regular */
        border: #49a6a2 solid 4px;
        border-radius: 10px;
        z-index: 10;
        text-align: center;
    }

    /* Form Styling */
    .form-wrapper {
        display: flex;
        align-items: center;
        justify-content: center;
        height: calc(100vh - 6.48vh); /* Height adapts with header */
        
    }

    .form-container {
        padding: 1.04vw; /* 20px -> 1.04vw */
        max-width: 68.83vw; /* 400px -> 20.83vw */
        width: 100%;
        text-align: center;
        box-sizing: border-box;
        margin-top: 11.48vh; /* 60px -> 6.48vh */
        z-index: 10;
        background: transparent;
        left: 5
    }

    .form-row {
        display: flex;
        align-items: center;
        margin-bottom: 2.4vh; /* 15px -> 1.39vh */
    }

    form label {
        margin-right: 10px; /* Space between label and input */
        text-align: center; /* Optional: right-align the label */
        z-index: 1;
    }

    /* Label Styling */
    .label-box {
        display: inline-flex;
        background-color: #49a6a2;
        padding: 0.46vh 1.52vw; /* Vertical and horizontal padding */
        border-radius: 0.74vw; /* Rounded corners */
        color: #ffffff;
        font-weight: bold;
        height: 4.2vh; /* Consistent height */
        width: 15.4vw; /* Fixed width for all labels */
        text-align: center;
        align-items: center;
        justify-content: center;
        z-index: -1;
    }

    .label-box.large {
        font-size: 3.9vw; /* 18px -> 0.93vw */
    }


    .label-box.small {
        font-size: 2.90vw; /* 14px -> 0.73vw */
    }

    form input {
        width: 85%;
        height: 40px;
        box-sizing: border-box;
        padding: 4px;
    }

    /* Button Styling */
    .button-wrapper {
        margin-left: 5.99vw; /* 115px -> 5.99vw */
        width: 85%;
    }

    .submit-button {
        border: none;
        background-color: #e9a3b8;
        width: 6.77vw; /* 130px -> 6.77vw */
        height: 3.7vh; /* 40px -> 3.7vh */
        border-radius: 0.26vw; /* 5px -> 0.26vw */
        font-family: 'Ubuntu', sans-serif;
        font-weight: 700;
        font-size: 1.04vw; /* medium font size -> adjust as needed */
        color: #31716e;
        cursor: pointer;
        z-index: 10;
    }

    /* Responsive Image Styling */
    .home-image {
        position: absolute;
        top: 4.5vh; /* 60px -> 5.56vh */
        left: 7.5vw; /* 50px -> 2.6vw */
        height: 9.67vh; /* 120px -> 11.1vh */
        z-index: 1;
    }

    .logo-image {
        position: absolute;
        top: 19.04vh; /* 130px -> 12.04vh */
        left: 50vh;
        transform: translate(-50%, -50%);
        height: 8.1vh; /* 120px -> 11.1vh */
        z-index: 1;
    }

    .adfan-image {
        position: absolute;
        top: 4.5vh; /* 60px -> 5.56vh */
        right: 7.3vw; /* 50px -> 2.6vw */
        height: 9.67vh; /* 180px -> 16.67vh */
        z-index: 4;
    }

    .heart-image {
        position: absolute;
        top: 3.15vh; /* -250px -> -23.15vh */
        right: -2.17vw; /* -80px -> -4.17vw */
        height: 35.96vh; /* 950px -> 87.96vh */
        z-index: -10;
        opacity: 0.3;
    }

    .hearts-image {
        position: absolute;
        top: 60%; /* 240px -> 22.22vh */
        left: 50%; /* -20px -> -1.04vw */
        height: 35.67vh; /* 450px -> 41.67vh */
        transform: translate(-50%, -50%);
        z-index: -9;
        opacity: 0.3;
    }

    .preregistro-image {
        position: absolute;
        top: 29%;
        left: 50%;
        transform: translate(-50%, -50%);
        height: 7.02vh; /* 65px -> 6.02vh */
        width: 52vw;
        z-index: 1;

    }

    .family-image {
        position: absolute;
        bottom: -12.5vh; /* -20px -> -1.85vh */
        left: 28vh;
        transform: rotate(-23deg);
        z-index: -8;
        opacity: .3;
    }

    /* Button Styling */
    .button-wrapper {
        margin-left: 14.99vw; /* 115px -> 5.99vw */
        width: 85%;
        z-index: 10;
    }

    .submit-button {
        border: none;
        background-color: #e9a3b8;
        width: 23.77vw; /* 130px -> 6.77vw */
        height: 3.3vh; /* 40px -> 3.7vh */
        border-radius: 3.26vw; /* 5px -> 0.26vw */
        font-family: 'Ubuntu', sans-serif;
        font-weight: 700;
        font-size: 4.04vw; /* medium font size -> adjust as needed */
        color: #31716e;
        cursor: pointer;
        z-index: -3;
    }

}

.message-success {
    color: green;
    font-weight: bold;
    margin-bottom: 15px;
    position: relative;
    top: -25px; /* Mover el mensaje ligeramente hacia arriba */
}

.message-error {
    color: red;
    font-weight: bold;
    margin-bottom: 15px;
    position: relative;
    top: -25px; /* Mover el mensaje ligeramente hacia arriba */
}

/* Ajustes para pantallas más pequeñas */
@media (max-width: 768px) {
    .message-success, .message-error {
        top: 0; /* Asegurarse de que no se superpongan en pantallas pequeñas */
        margin-bottom: 20px; /* Aumentar el margen inferior para más espacio */
    }
}

